kubernetes/_base/observability/grafana/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grafana
  namespace: observability
spec:
  replicas: 1
  selector:
    matchLabels:
      app: grafana
  template:
    metadata:
      labels:
        app: grafana
    spec:
      securityContext:
        fsGroup: 472
        runAsUser: 472
        runAsGroup: 472
        runAsNonRoot: true
      containers:
        - name: grafana
          image: grafana/grafana:12.2.0-17660687647
          ports:
            - containerPort: 3000
          volumeMounts:
            - name: grafana-config
              mountPath: /var/lib/grafana
      volumes:
        - name: grafana-config
          persistentVolumeClaim:
            claimName: grafana-config
